website/versioned_docs/version-2.0.0-alpha.12/web.md
---
id: version-2.0.0-alpha.12-web
title: web package
hide_title: true
original_id: web
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## web package

## Classes

|  Class | Description |
|  --- | --- |
|  [AuthContainer](./web.authcontainer.md) |  |
|  [BaseAPIClient](./web.baseapiclient.md) |  |
|  [Container](./web.container.md) |  |
|  [GlobalJSONContainerStorage](./web.globaljsoncontainerstorage.md) |  |
|  [MFAContainer](./web.mfacontainer.md) |  |
|  [SkygearError](./web.skygearerror.md) |  |
|  [WebAPIClient](./web.webapiclient.md) |  |
|  [WebAuthContainer](./web.webauthcontainer.md) |  |
|  [WebContainer](./web.webcontainer.md) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [decodeAuthenticator(a)](./web.decodeauthenticator.md) |  |
|  [decodeAuthResponse(r)](./web.decodeauthresponse.md) |  |
|  [decodeError(err)](./web.decodeerror.md) |  |
|  [decodeIdentity(i)](./web.decodeidentity.md) |  |
|  [decodeSession(s)](./web.decodesession.md) |  |
|  [decodeUser(u)](./web.decodeuser.md) |  |
|  [encodeIdentity(i)](./web.encodeidentity.md) |  |
|  [encodeQuery(query)](./web.encodequery.md) |  |
|  [encodeQueryComponent(s)](./web.encodequerycomponent.md) |  |
|  [encodeUser(u)](./web.encodeuser.md) |  |
|  [generateOTPAuthURI(options)](./web.generateotpauthuri.md) |  |
|  [isMFARequiredError(e)](./web.ismfarequirederror.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [ActivateOOBResult](./web.activateoobresult.md) |  |
|  [ActivateTOTPResult](./web.activatetotpresult.md) |  |
|  [AuthenticateWithOOBOptions](./web.authenticatewithooboptions.md) |  |
|  [AuthenticateWithTOTPOptions](./web.authenticatewithtotpoptions.md) |  |
|  [AuthenticationSession](./web.authenticationsession.md) |  |
|  [AuthResponse](./web.authresponse.md) |  |
|  [ContainerOptions](./web.containeroptions.md) |  |
|  [ContainerStorage](./web.containerstorage.md) |  |
|  [CreateNewOOBEmailOptions](./web.createnewoobemailoptions.md) |  |
|  [CreateNewOOBResult](./web.createnewoobresult.md) |  |
|  [CreateNewOOBSMSOptions](./web.createnewoobsmsoptions.md) |  |
|  [CreateNewTOTPOptions](./web.createnewtotpoptions.md) |  |
|  [CreateNewTOTPResult](./web.createnewtotpresult.md) |  |
|  [CustomTokenIdentity](./web.customtokenidentity.md) |  |
|  [ExtraSessionInfoOptions](./web.extrasessioninfooptions.md) |  |
|  [GenerateOTPAuthURIOptions](./web.generateotpauthurioptions.md) |  |
|  [JSONArray](./web.jsonarray.md) |  |
|  [JSONObject](./web.jsonobject.md) |  |
|  [OAuthIdentity](./web.oauthidentity.md) |  |
|  [OAuthWebPopupAuthorizationURLOptions](./web.oauthwebpopupauthorizationurloptions.md) |  |
|  [OAuthWebRedirectAuthorizationURLOptions](./web.oauthwebredirectauthorizationurloptions.md) |  |
|  [OOBEmailAuthenticator](./web.oobemailauthenticator.md) |  |
|  [OOBSMSAuthenticator](./web.oobsmsauthenticator.md) |  |
|  [PasswordIdentity](./web.passwordidentity.md) |  |
|  [Session](./web.session.md) |  |
|  [SessionUserAgent](./web.sessionuseragent.md) |  |
|  [SSOLoginOptions](./web.ssologinoptions.md) |  |
|  [StorageDriver](./web.storagedriver.md) |  |
|  [TOTPAuthenticator](./web.totpauthenticator.md) |  |
|  [User](./web.user.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [defaultContainer](./web.defaultcontainer.md) |  |
|  [localStorageStorageDriver](./web.localstoragestoragedriver.md) |  |
|  [SkygearErrorNames](./web.skygearerrornames.md) |  |
|  [VERSION](./web.version.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Authenticator](./web.authenticator.md) |  |
|  [CreateNewOOBOptions](./web.createnewooboptions.md) |  |
|  [Identity](./web.identity.md) |  |
|  [JSONValue](./web.jsonvalue.md) |  |
|  [OAuthAuthorizationURLOptions](./web.oauthauthorizationurloptions.md) |  |
|  [SkygearErrorName](./web.skygearerrorname.md) |  |

